--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           distribution: zulu
-          java-verion: 17
+          java-version: 17
 
       - name: Setup Gradle and run tests
         uses: gradle/gradle-build-action@v2
