--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -21,6 +21,7 @@ jobs:
       - name: Configure JDK
         uses: actions/setup-java@v3
         with:
+          distribution: zulu
           java-verion: 17
 
       - name: Setup Gradle
