--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -23,6 +23,7 @@ jobs:
         with:
           distribution: zulu
           java-verion: 17
+          cache: gradle
 
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
