--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,6 +18,7 @@ jobs:
         with:
           distribution: zulu
           java-version: 17
+          cache: gradle
 
       - name: Setup Gradle and run tests
         uses: gradle/gradle-build-action@v2
