--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:base"],
+  "addLabels": ["dependencies", "renovate"],
   "prHourlyLimit": 0,
   "assignees": ["nartsisss"]
 }
