--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,9 +3,11 @@ kotlin = "1.8.22"
 ktor = "2.3.1"
 jsoup = "1.16.1"
 jupiter = "5.9.3"
+dokka = "1.8.20"
 
 [plugins]
 kotlin = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
+dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
 
 [libraries]
 ktor-client-core = { module = "io.ktor:ktor-client-core-jvm", version.ref = "ktor" }
