--- a/.github/workflows/deploy-dokka.yaml
+++ b/.github/workflows/deploy-dokka.yaml
@@ -15,7 +15,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/chekout@v3
+        uses: actions/checkout@v3
 
       - name: Setup JDK
         uses: actions/setup-java@v3
