--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,7 +1,12 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:base"],
-  "addLabels": ["dependencies", "renovate"],
-  "prHourlyLimit": 0,
-  "assignees": ["nartsisss"]
+  "extends": [
+    ":disableDependencyDashboard",
+    ":prHourlyLimitNone",
+    ":semanticCommits",
+    ":semanticPrefixChore",
+    ":automergeMinor"
+  ],
+  "platformAutomerge": true,
+  "labels": ["renovate", "dependencies"]
 }
